--- a/code/settings.json
+++ b/code/settings.json
@@ -5,7 +5,7 @@
     "editor.defaultFormatter": "ms-python.autopep8"
   },
   "workbench.iconTheme": "material-icon-theme",
-  "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "[typescriptreact]": {
@@ -17,7 +17,7 @@
   "editor.foldingImportsByDefault": true,
   "files.autoSave": "onFocusChange",
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit"
   },
   "[go]": {
     "editor.defaultFormatter": "golang.go"
@@ -59,5 +59,6 @@
   },
   "terminal.integrated.env.linux": {},
   "console-ninja.featureSet": "Community",
-  "fonted.font": "Fira Code"
+  "explorer.compactFolders": false
 }
+
