--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -12,8 +12,6 @@ $c\
 $elixir\
 $elm\
 $golang\
-$python\
-$dart\
 $gradle\
 $haskell\
 $java\
@@ -29,8 +27,6 @@ $time\
 [ ](fg:#33658A)\
 """
 
-
-
 # Disable the blank line at the start of the prompt
 # add_newline = false
 
@@ -43,15 +39,11 @@ style_root = "bg:#9A348E"
 format = '[$user ]($style)'
 disabled = false
 
-[cmd_duration]
-min_time = 10_000  # Show command duration over 10,000 milliseconds (=10 sec)
-format = " took [$duration]($style)"
-
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
 style = "bg:#9A348E"
-disabled = false # Disabled by default
+disabled = true # Disabled by default
 
 [directory]
 style = "bg:#DA627D"
@@ -62,15 +54,15 @@ truncation_symbol = "…/"
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
-"Documents" = " "
+"Documents" = "󰈙 "
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
 # Keep in mind that the order matters. For example:
-# "Important Documents" = "  "
+# "Important Documents" = " 󰈙 "
 # will not be replaced, because "Documents" was already substituted before.
 # So either put "Important Documents" before "Documents" or use the substituted version:
-# "Important  " = "  "
+# "Important 󰈙 " = " 󰈙 "
 
 [c]
 symbol = " "
@@ -80,7 +72,7 @@ format = '[ $symbol ($version) ]($style)'
 [docker_context]
 symbol = " "
 style = "bg:#06969A"
-format = '[ $symbol $context ]($style) $path'
+format = '[ $symbol $context ]($style)'
 
 [elixir]
 symbol = " "
@@ -120,10 +112,6 @@ symbol = " "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
-[python]
-format = "[$symbol$version]($style) "
-style = "bold green"
-
 [julia]
 symbol = " "
 style = "bg:#86BBD8"
@@ -135,7 +123,7 @@ style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
 [nim]
-symbol = " "
+symbol = "󰆥 "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
@@ -154,4 +142,3 @@ disabled = false
 time_format = "%R" # Hour:Minute Format
 style = "bg:#33658A"
 format = '[ 🔥 $time ]($style)'
-
