Update sublime-text settings

--- a/sublime-text/settings.json
+++ b/sublime-text/settings.json
@@ -4,5 +4,7 @@
   "theme": "auto",
   "font_face": "Fira Code",
   "font_options": ["gray_antialias"],
-  "index_files": true
+  "index_files": true,
+  "hot_exit": false,
+  "remember_open_files": false
 }
