--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono Medium
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      Fira Code Medium
+bold_font        Fira Code Bold
+italic_font      Fira Code Italic
+bold_italic_font Fira Code Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -443,7 +443,7 @@ adjust_line_height  92%
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_title_template {title}
+tab_title_template {index}: {title}
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -947,8 +947,8 @@ macos_thicken_font 0.3
  map cmd+t           new_tab_with_cwd
 # map kitty_mod+q     close_tab
 # map cmd+w           close_tab
-# map kitty_mod+.     move_tab_forward
-# map kitty_mod+,     move_tab_backward
+map kitty_mod+.     move_tab_forward
+map kitty_mod+,     move_tab_backward
 # map kitty_mod+alt+t set_tab_title
  map shift+ctrl+i     set_tab_title
 
@@ -956,8 +956,15 @@ macos_thicken_font 0.3
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab::
 
-#:     map ctrl+alt+1 goto_tab 1
-#:     map ctrl+alt+2 goto_tab 2
+map kitty_mod+1 goto_tab 1
+map kitty_mod+2 goto_tab 2
+map kitty_mod+3 goto_tab 3
+map kitty_mod+4 goto_tab 4
+map kitty_mod+5 goto_tab 5
+map kitty_mod+6 goto_tab 6
+map kitty_mod+7 goto_tab 7
+map kitty_mod+8 goto_tab 8
+map kitty_mod+9 goto_tab 9
 
 #: Just as with new_window above, you can also pass the name of
 #: arbitrary commands to run when using new_tab and use
