--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -303,7 +303,7 @@ adjust_line_height  92%
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts fat,stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -589,7 +589,7 @@ shell fish
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-allow_remote_control no
+ allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -965,6 +965,7 @@ map kitty_mod+6 goto_tab 6
 map kitty_mod+7 goto_tab 7
 map kitty_mod+8 goto_tab 8
 map kitty_mod+9 goto_tab 9
+map kitty_mod+x toggle_layout stack
 
 #: Just as with new_window above, you can also pass the name of
 #: arbitrary commands to run when using new_tab and use
@@ -1115,5 +1116,3 @@ map kitty_mod+9 goto_tab 9
 #: }}}
 
 # }}}
-
-
