update kitty conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -602,7 +602,7 @@ shell fish
 #: you want to prevent programs running on a remote computer over ssh
 #: from controlling kitty.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
@@ -915,15 +915,15 @@ macos_thicken_font 0.3
 # map kitty_mod+r start_resizing_window
  map ctrl+shift+r       start_resizing_window
 # map kitty_mod+1 first_window
-# map cmd+1       first_window
+map ctrl+1       first_window
 # map kitty_mod+2 second_window
-# map cmd+2       second_window
+map ctrl+2       second_window
 # map kitty_mod+3 third_window
-# map cmd+3       third_window
+map ctrl+3       third_window
 # map kitty_mod+4 fourth_window
-# map cmd+4       fourth_window
+map ctrl+4       fourth_window
 # map kitty_mod+5 fifth_window
-# map cmd+5       fifth_window
+map ctrl+5       fifth_window
 # map kitty_mod+6 sixth_window
 # map cmd+6       sixth_window
 # map kitty_mod+7 seventh_window
@@ -1116,3 +1116,4 @@ map kitty_mod+x toggle_layout stack
 #: }}}
 
 # }}}
+
