--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,7 +1,7 @@
 format = """
 [](#9A348E)\
 $os\
-$username\
+$username -> $hostname\
 [](bg:#DA627D fg:#9A348E)\
 $directory\
 [](fg:#DA627D bg:#FCA17D)\
@@ -27,11 +27,6 @@ $time\
 [ ](fg:#33658A)\
 """
 
-# Disable the blank line at the start of the prompt
-# add_newline = false
-
-# You can also replace your username with a neat symbol like   or disable this
-# and use the os module below
 [username]
 show_always = true
 style_user = "bg:#9A348E"
@@ -39,11 +34,15 @@ style_root = "bg:#9A348E"
 format = '[$user ]($style)'
 disabled = false
 
-# An alternative to the username module which displays a symbol that
-# represents the current operating system
 [os]
 style = "bg:#9A348E"
-disabled = true # Disabled by default
+disabled = true
+
+[hostname]
+ssh_only = false
+style = "bg:#9A348E"
+format = "[$hostname ]($style)"
+disabled = false
 
 [directory]
 style = "bg:#DA627D"
@@ -51,18 +50,11 @@ format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
 
-# Here is how you can shorten some long paths by text replacement
-# similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
 "Documents" = "󰈙 "
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
-# Keep in mind that the order matters. For example:
-# "Important Documents" = " 󰈙 "
-# will not be replaced, because "Documents" was already substituted before.
-# So either put "Important Documents" before "Documents" or use the substituted version:
-# "Important 󰈙 " = " 󰈙 "
 
 [c]
 symbol = " "
@@ -139,6 +131,6 @@ format = '[ $symbol ($version) ]($style)'
 
 [time]
 disabled = false
-time_format = "%R" # Hour:Minute Format
+time_format = "%R"
 style = "bg:#33658A"
 format = '[ 🔥 $time ]($style)'
