--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -303,7 +303,7 @@ adjust_line_height  92%
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts fat,stack
+enabled_layouts fat,stack,tall,grid
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -977,7 +977,7 @@ map kitty_mod+x toggle_layout stack
 
 #: Layout management {{{
 
-# map kitty_mod+l next_layout
+map kitty_mod+l next_layout
 
 #: You can also create shortcuts to switch to specific layouts::
 
@@ -1117,3 +1117,4 @@ map kitty_mod+x toggle_layout stack
 
 # }}}
 
+linux_display_server x11
