Update kitty conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1118,3 +1118,14 @@ map kitty_mod+l next_layout
 # }}}
 
 linux_display_server x11
+
+map alt+1 send_text all \x1b1
+map alt+2 send_text all \x1b2
+map alt+3 send_text all \x1b3
+map alt+4 send_text all \x1b4
+map alt+5 send_text all \x1b5
+map alt+6 send_text all \x1b6
+map alt+7 send_text all \x1b7
+map alt+8 send_text all \x1b8
+map alt+9 send_text all \x1b9
+
